[package]
name = "rust_hyperbolic"
version = "0.1.0"
authors = ["Lando <lando.schumpich@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nannou = "0.12"
arcs = "0.1.0"
anyhow = "1.0"
kurbo = "0.5"
log = "0.4.8"
piet = "0.0.7"
shred-derive = "0.6"
specs = "0.15"
specs-derive = "0.4"
